# docker-auto-backup

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dev.example.sh  entrypoint.sh  generate_backup.sh  unpack_backup.sh
.github/workflows/: publish.yml
src/: backblaze.rs  backup.rs  config_parser.rs  main.rs  ntfy.rs  spawn.rs  utils.rs
src/backblaze/: storage.rs  uploader.rs
